--- a/.classpath
+++ b/.classpath
@@ -13,5 +13,9 @@
 	<classpathentry kind="lib" path="lib/javaFlacEncoder-0.3.1.jar"/>
 	<classpathentry kind="lib" path="lib/miglayout-core-4.2.jar"/>
 	<classpathentry kind="lib" path="lib/netty-all-4.0.20.Final.jar"/>
+	<classpathentry kind="lib" path="lib/openehr-rm-core-1.0.2-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="lib/openehr-ap-1.0.2-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="lib/openehr-aom-1.0.2-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="lib/dadl-parser-1.0.2-SNAPSHOT.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
