--- a/.classpath
+++ b/.classpath
@@ -17,5 +17,7 @@
 	<classpathentry kind="lib" path="lib/openehr-ap-1.0.2-SNAPSHOT.jar"/>
 	<classpathentry kind="lib" path="lib/openehr-aom-1.0.2-SNAPSHOT.jar"/>
 	<classpathentry kind="lib" path="lib/dadl-parser-1.0.2-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="lib/substance-6.1.jar"/>
+	<classpathentry kind="lib" path="lib/trident.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
